// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonComponent should match previous snapshot 1`] = `
<styled.input
  disabled={false}
  id="inp"
  placeholder="Type here."
  type="text"
/>
`;

exports[`RadioButtonComponent should match previous snapshot for disabled state 1`] = `
<styled.input
  bg="F6F6F4"
  color="#8C8C8C"
  disabled={true}
  id="inp"
  placeholder="Type here."
  type="text"
/>
`;

exports[`RadioButtonComponent should match previous snapshot for input with custom placeholder 1`] = `
<styled.input
  disabled={false}
  id="inp"
  placeholder="Enter details here"
  type="text"
/>
`;

exports[`RadioButtonComponent should match previous snapshot for input with specified type 1`] = `
<styled.input
  disabled={false}
  id="inp"
  placeholder="Type here."
  type="password"
/>
`;

exports[`RadioButtonComponent should match previous snapshot for input with validation error 1`] = `
<styled.input
  border="solid 1px red"
  disabled={false}
  id="inp"
  placeholder="Type here."
  type="text"
/>
`;
